fix #52 Add Adaptive Preregistration using GitHub vignette

--- a/data/references.bib
+++ b/data/references.bib
@@ -1931,8 +1931,113 @@ abstract = {<jats:p>In 2012, the American Political Science Association (APSA) C
 location = {}, 
 keywords = {}}
 
+@Article{Schmolke:2010fd,
+author = {Schmolke, Amelie et al.}, 
+title = {Ecological models supporting environmental decision making: a strategy for the future}, 
+journal = {Trends in Ecology & Evolution}, 
+volume = {25}, 
+number = {8}, 
+pages = {479–486}, 
+year = {2010}, 
+abstract = {}, 
+location = {}, 
+keywords = {Decision making; Decision support; Ecological modelling; Good modelling practice; Model description; Model development; model documentation; transparency}}
 
+@Proceedings{deVos:2011uk,
+author = {de Vos, M G et al.}, 
+editor = {}, 
+title = {Are environmental models transparent and reproducible enough}, 
+booktitle = {Are environmental models transparent and reproducible enough}, 
+volume = {}, 
+publisher = {}, 
+address = {Perth, Australia}, 
+pages = {}, 
+year = {2011}, 
+abstract = {Environmental computer models are considered essential tools in supporting environmental decision making, but their main value is that they allow a better understanding of our complex environment. Environmental models are in fact applications of shared theories on how real-world systems are functioning. Just like the underlying scientific theories they need to be evaluated and discussed among peers. To allow proper assessment of the quality and suitability of environmental models peers should be able to trace their results and insights.}, 
+keywords = {Good modelling practice; Model evaluation; model quality; Peer review; reproducibility; transparency}}
 
+@Article{Alexandrov:2011iv,
+author = {Alexandrov, G A et al.}, 
+title = {Technical assessment and evaluation of environmental models and software: Letter to the Editor}, 
+journal = {Environmental Modelling & Software}, 
+volume = {26}, 
+number = {3}, 
+pages = {328–336}, 
+year = {2011}, 
+abstract = {Environmental Modelling and Software, 26 (2011) 328-336. doi:10.1016/j.envsoft.2010.08.004}, 
+location = {}, 
+keywords = {}}
 
+@Article{Feng2019,
+author = {Feng, X et al.}, 
+title = {A checklist for maximizing reproducibility of ecological niche models.}, 
+journal = {Nat Ecol Evol}, 
+volume = {3}, 
+number = {10}, 
+pages = {1382–1395}, 
+year = {2019}, 
+abstract = {Reporting specific modelling methods and metadata is essential to the reproducibility of ecological studies, yet guidelines rarely exist regarding what information should be noted. Here, we address this issue for ecological niche modelling or species distribution modelling, a rapidly developing toolset in ecology used across many aspects of biodiversity science. Our quantitative review of the recent literature reveals a general lack of sufficient information to fully reproduce the work. Over two-thirds of the examined studies neglected to report the version or access date of the underlying data, and only half reported model parameters. To address this problem, we propose adopting a checklist to guide studies in reporting at least the minimum information necessary for ecological niche modelling reproducibility, offering a straightforward way to balance efficiency and accuracy. We encourage the ecological niche modelling community, as well as journal reviewers and editors, to utilize and further develop this framework to facilitate and improve the reproducibility of future work. The proposed checklist framework is generalizable to other areas of ecology, especially those utilizing biodiversity data, environmental data and statistical modelling, and could also be adopted by a broader array of disciplines.}, 
+location = {Institute of the Environment, University of Arizona, Tucson, AZ, USA. fengxiao@e-mail.arizona.edu. School of Natural Resources and the Environment, University of Arizona, Tucson, AZ, USA. fengxiao@e-mail.arizona.edu. Department of Organismic and Evolutionary Biology, Harvard University, Cambridge, MA, USA. Department of Integrative Biology, Oklahoma State University, Stillwater, OK, USA. Biodiversity Institute, University of Kansas, Lawrence, KS, USA. Ecology and Evolutionary Biology, University of Connecticut, Storss, CT, USA. Department of Ecology and Evolutionary Biology, University of Tennessee, Knoxville, TN, USA.}, 
+keywords = {}}
 
+@Article{Addison:2013wa,
+author = {Addison, Prue FE et al.}, 
+title = {Practical solutions for making models indispensable in conservation decision-making}, 
+journal = {Diversity and Distributions}, 
+volume = {19}, 
+number = {5-6}, 
+pages = {490–502}, 
+year = {2013}, 
+abstract = {}, 
+location = {}, 
+keywords = {Communication; Conservation; Modelling; Structured decision-making; Trust; Uncertainty; Papers_flagged}}
+
+@Article{Pavelin2012,
+author = {Pavelin, K et al.}, 
+title = {Bioinformatics meets user-centred design: a perspective.}, 
+journal = {PLoS Comput Biol}, 
+volume = {8}, 
+number = {7}, 
+pages = {e1002554}, 
+year = {2012}, 
+abstract = {Designers have a saying that “the joy of an early release lasts but a short time. The bitterness of an unusable system lasts for years.” It is indeed disappointing to discover that your data resources are not being used to their full potential. Not only have you invested your time, effort, and research grant on the project, but you may face costly redesigns if you want to improve the system later. This scenario would be less likely if the product was designed to provide users with exactly what they need, so that it is fit for purpose before its launch. We work at EMBL-European Bioinformatics Institute (EMBL-EBI), and we consult extensively with life science researchers to find out what they need from biological data resources. We have found that although users believe that the bioinformatics community is providing accurate and valuable data, they often find the interfaces to these resources tricky to use and navigate. We believe that if you can find out what your users want even before you create the first mock-up of a system, the final product will provide a better user experience. This would encourage more people to use the resource and they would have greater access to the data, which could ultimately lead to more scientific discoveries. In this paper, we explore the need for a user-centred design (UCD) strategy when designing bioinformatics resources and illustrate this with examples from our work at EMBL-EBI. Our aim is to introduce the reader to how selected UCD techniques may be successfully applied to software design for bioinformatics.}, 
+location = {EMBL-EBI, Wellcome Trust Genome Campus, Hinxton, Cambridge, United Kingdom.}, 
+keywords = {}}
+
+@Article{Nosek:2018eg,
+author = {Nosek, Brian A et al.}, 
+title = {The preregistration revolution.}, 
+journal = {Proceedings of the National Academy of Sciences of the United States of America}, 
+volume = {115}, 
+number = {11}, 
+pages = {2600–2606}, 
+year = {2018}, 
+abstract = {Progress in science relies in part on generating hypotheses with existing observations and testing hypotheses with new observations. This distinction between postdiction and prediction is appreciated conceptually but is not respected in practice. Mistaking generation of postdictions with testing of predictions reduces the credibility of research findings. However, ordinary biases in human reasoning, such as hindsight bias, make it hard to avoid this mistake. An effective solution is to define the research questions and analysis plan before observing the research outcomes-a process called preregistration. Preregistration distinguishes analyses and outcomes that result from predictions from those that result from postdictions. A variety of practical strategies are available to make the best possible use of preregistration in circumstances that fall short of the ideal application, such as when the data are preexisting. Services are now available for preregistration across all disciplines, facilitating a rapid increase in the practice. Widespread adoption of preregistration will increase distinctiveness between hypothesis generation and hypothesis testing and will improve the credibility of research findings.}, 
+location = {Center for Open Science, Charlottesville, VA 22903; nosek@virginia.edu.}, 
+keywords = {}}
+
+@Article{Mertens2019,
+author = {Mertens, G and Krypotos, AM}, 
+title = {Preregistration of Analyses of Preexisting Data.}, 
+journal = {Psychol Belg}, 
+volume = {59}, 
+number = {1}, 
+pages = {338–352}, 
+year = {2019}, 
+abstract = {The preregistration of a study’s hypotheses, methods, and data-analyses steps is becoming a popular psychological research practice. To date, most of the discussion on study preregistration has focused on the preregistration of studies that include the collection of original data. However, much of the research in psychology relies on the (re-)analysis of preexisting data. Importantly, this type of studies is different from original studies as researchers cannot change major aspects of the study (e.g., experimental manipulations, sample size). Here, we provide arguments as to why it is useful to preregister analyses of preexisting data, discuss practical considerations, consider potential concerns, and introduce a preregistration template tailored for studies focused on the analyses of preexisting data. We argue that the preregistration of hypotheses and data-analyses for analyses of preexisting data is an important step towards more transparent psychological research.}, 
+location = {}, 
+keywords = {}}
+
+@Proceedings{deVos:2011,
+author = {de Vos, M G et al.}, 
+editor = {}, 
+title = {Are environmental models transparent and reproducible enough}, 
+booktitle = {Are environmental models transparent and reproducible enough}, 
+volume = {}, 
+publisher = {}, 
+address = {Perth, Australia}, 
+pages = {}, 
+year = {2011}, 
+abstract = {Environmental computer models are considered essential tools in supporting environmental decision making, but their main value is that they allow a better understanding of our complex environment. Environmental models are in fact applications of shared theories on how real-world systems are functioning. Just like the underlying scientific theories they need to be evaluated and discussed among peers. To allow proper assessment of the quality and suitability of environmental models peers should be able to trace their results and insights.}, 
+keywords = {Good modelling practice; Model evaluation; model quality; Peer review; reproducibility; transparency}}
 
