--- a/data/references.bib
+++ b/data/references.bib
@@ -2041,3 +2041,33 @@ year = {2011},
 abstract = {Environmental computer models are considered essential tools in supporting environmental decision making, but their main value is that they allow a better understanding of our complex environment. Environmental models are in fact applications of shared theories on how real-world systems are functioning. Just like the underlying scientific theories they need to be evaluated and discussed among peers. To allow proper assessment of the quality and suitability of environmental models peers should be able to trace their results and insights.}, 
 keywords = {Good modelling practice; Model evaluation; model quality; Peer review; reproducibility; transparency}}
 
+
+@article{braga2023,
+	title = {Not just for programmers: How GitHub can accelerate collaborative and reproducible research in ecology and evolution},
+	author = {Braga, Pedro Henrique Pereira and {Hébert}, Katherine and Hudgins, Emma J. and Scott, Eric R. and Edwards, Brandon P. M. and {Sánchez Reyes}, Luna L. and Grainger, Matthew J. and Foroughirad, Vivienne and Hillemann, Friederike and Binley, Allison D. and Brookson, Cole B. and Gaynor, Kaitlyn M. and Shafiei Sabet, Saeed and {Güncan}, Ali and Weierbach, Helen and Gomes, Dylan G. E. and Crystal-Ornelas, Robert},
+	year = {2023},
+	date = {2023},
+	journal = {Methods in Ecology and Evolution},
+	pages = {1364--1380},
+	volume = {14},
+	number = {6},
+	doi = {10.1111/2041-210X.14108},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/2041-210X.14108},
+	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/2041-210X.14108},
+	langid = {en}
+}
+
+@article{Bryan:2008en,
+	title = {Systematic regional planning for multiple objective natural resource management},
+	author = {Bryan, Brett A. and Crossman, Neville D.},
+	year = {2008},
+	month = {09},
+	date = {2008-09},
+	journal = {Journal of Environmental Management},
+	pages = {1175--1189},
+	volume = {88},
+	number = {4},
+	doi = {10.1016/j.jenvman.2007.06.003},
+	note = {Citation Key: Bryan:2008en},
+	langid = {English}
+}
