--- a/index.qmd
+++ b/index.qmd
@@ -7,6 +7,6 @@ This site covers the following topics:
 
 1.  Background on researcher degrees of freedom, the risk of questionable research practices (QRPs), and introduction to preregistration as a tool for mitigating QRPs.
 2.  Adaptive Preregistration
-    1.  *Background*: What is it and what are its key features
-    2.  *A practical guide*: How to implement adaptive preregistration with git and github.
+    1.  *Background*: What is adaptive preregistration, why do we need it for registering modeling analyses, and what are its defining features?
+    2.  *A practical guide*: How to implement adaptive preregistration using [git](https://git-scm.com) and [GitHub](www.github.com).
 3.  Preregistration of model-based research in ecology and conservation. Provides an overview of the sorts of things that we should preregister when modelling, what practices to look out for, what things should be registered as decision-trees.
